# life-expectancy-analysis

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: architecture.md  data_dictionary.md  methodology.md  report_outline.md
life_expectancy/: cli.py
life_expectancy/analysis/: diagnostics.py
life_expectancy/data/: cleaning.py  imputation.py  loading.py  missingness.py  panel.py  preprocessing.py  standardization.py  utils.py  wdi.py
life_expectancy/features/: feature_engineering.py  feature_selection.py  temporal.py
life_expectancy/modeling/: pipelines.py  registries.py  splits.py  train_eval.py
life_expectancy/modeling/experiments/: boosting.py  core.py  sequence.py  wdi.py
life_expectancy/modeling/model/: boosting.py  neural.py
life_expectancy/modeling/models/: baselines.py  boosting.py  lstm.py  tree.py
notebooks/: 00_data_loading.ipynb  01_data_exploration.ipynb  02_data_cleaning.ipynb  03_descriptive_analysis.ipynb  04_comparative_analysis.ipynb  05_correlation_analysis.ipynb  06_modeling_baselines.ipynb  07_model_diagnostics.ipynb  08_visualizations.ipynb  09_advanced_models.ipynb  09_timeaware_advanced_models.ipynb  10_lag_and_interpretability.ipynb  10_timeaware_lag_and_interpretability.ipynb  11_external_boosting_and_lstm.ipynb  12_wdi_modeling.ipynb
reports/models/: week11_wdi_lag_ridge_2000_2015.joblib
src/analysis/: diagnostics.py
src/clean/: build_panel.py  filter_entities.py  impute.py  inspect_missingness.py  merge.py  scale_features.py
src/data/: data_loading.py  data_preprocessing.py  feature_engineering.py
src/ingest/: load_raw.py
src/modeling/: advanced_models.py  baselines.py  experiment_runner.py  external_boosting.py  pipelines.py  sequence_models.py  splits.py  temporal.py  train_eval.py
tests/data/: test_cleaning.py  test_imputation.py  test_loading.py  test_missingness.py  test_panel.py  test_preprocessing.py  test_standardization.py  test_utils.py  test_wdi.py
tests/features/: test_engineerinng.py  test_selection.py  test_temporal.py
tests/modeling/: test_analysis_diagnostics.py  test_baselines.py  test_boosting_helpers.py  test_experiment_core.py  test_lstm.py  test_pipelines.py  test_registries.py  test_sequence_helpers.py  test_splits.py  test_train_eval.py
