[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life-expectancy-analysis"
version = "0.1.0"
description = "Reproducible life expectancy analysis pipeline with CLI, modeling, and reporting."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Aleksia Kolo" }
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "statsmodels",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pre-commit>=3.7",
    "ruff>=0.6",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "types-PyYAML>=6.0",
]

advanced = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "statsmodels>=0.14",
]

sequence = [
    "torch>=2.0",
]

all = [
    "life-expectancy-analysis[dev,advanced,sequence]"
]

[project.scripts]
lifeexp = "life_expectancy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["life_expectancy*"]
exclude = ["src*", "notebooks*", "data*", "artifacts*", "docs*", "tests*"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "life_expectancy_env",
    "__pycache__",
    "data",
    "artifacts",
    "notebooks",
    "src",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # import sorting
    "B",    # bugbear
    "UP",   # modern Python syntax
    "D",    # docstrings
    "ANN",  # type annotations
]
ignore = [
    "D100",    # missing docstring in public module
    "D104",    # missing docstring in public package
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
files = ["life_expectancy", "tests"]
exclude = [
    "src/",
    "notebooks/",
    "data/",
    "artifacts/",
]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
